version 0.82.05
	Limited K-3 II support (Testing)
	Makefile cleanup (exiftool)
	K-3 support ( thx Tao Wang )

version 0.82.04 ( 2015-08-28 )
	More debug messages
	jpeg contrast/hue/sharpness/saturation GUI bugfix
	Image tone bugfix (thx Mike Protts)
	Disable muted jpeg image tone for K-x because it's not working correctly
	Android build fixes
	Disable jpeg hue change for old cameras without jpeg hue setting
	Makefile code cleanup
	Project moved to github.com
	Update/addition of dlls to windows port
	Servermode documentation

version 0.82.02 ( 2015-06-28 )
	--pentax_debug_mode ( thx Samo Penic )
	Testing support for K-50
	Updating lens info database ( exiftool 9.700 )
	Jpeg quality bugfix (cmd,gui)
	Better model recognition

version 0.82.00 ( 2014-11-01 )
	Using newer mingw for Windows crosscompile
	Attemp to fix root requirement
	strncpy bugfix
	Also check /dev/block if device file is not found in /dev
	android port of pktriggercord-cli
	pktriggercord-cli:
	  --servermode ( not for Windows )
	  --servermode_timeout
	servermode subcommands:
	    stopserver, disconnect, echo, connect, update_status,
	    get_camera_name, get_lens_name, get_current_shutter_speed,
	    get_current_aperture, get_current_iso, focus, get_bufmask,
	    get_preview_buffer, get_buffer, delete_buffer
	android GUI: status reading, focus, single shutter, multi shutter

version 0.81.04 ( 2014-05-01 )
	--noshutter ( thx Piotr Dlugosz )
	Support for Samsung GX-1L ( not working )
	K-5 IIs jpeg star calculation fix ( commandline )
	Unknown camera segmentation fault bugfix
	Limited support for K-3 ( not working )

version 0.81.02 ( 2013-11-01 )
	udev rule change
	K-30 commandline exposure mode bugfix ( thx Camilo Polymeris )
	User mode combo bugfix
	K100D / K100D Super connection bugfix ( not working )
	gtk_range_get_value bugfix
	Human readable exposure submode

version 0.81.00 ( 2013-04-25 )
	Support for K-5 II / K-5 IIs ( thx Thomas Lehmann for testing )
	K10D/K20D: Exposure mode reading bugfix